--- a/source/gui/VaultWidget.ui
+++ b/source/gui/VaultWidget.ui
@@ -14,35 +14,56 @@
    <string>Vault</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QTreeWidget" name="groupsTree">
-     <property name="headerHidden">
-      <bool>false</bool>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <column>
-      <property name="text">
-       <string>Groups</string>
+     <widget class="QTreeWidget" name="groupsTree">
+      <property name="headerHidden">
+       <bool>false</bool>
       </property>
-     </column>
-    </widget>
-   </item>
-   <item>
-    <widget class="QTableWidget" name="entriesTable">
-     <column>
-      <property name="text">
-       <string>Title</string>
+      <column>
+       <property name="text">
+        <string>Groups</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QTableWidget" name="entriesTable">
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
       </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Username</string>
+      <property name="editTriggers">
+       <enum>QAbstractItemView::NoEditTriggers</enum>
       </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>URL</string>
-      </property>
-     </column>
+      <column>
+       <property name="text">
+        <string>Title</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Username</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>URL</string>
+       </property>
+      </column>
+     </widget>
     </widget>
    </item>
   </layout>
