--- a/source/gui/VaultWidget.ui
+++ b/source/gui/VaultWidget.ui
@@ -241,6 +241,104 @@ QLineEdit::placeholder {
      </widget>
     </widget>
    </item>
+   <item>
+    <widget class="QFrame" name="statusFrame">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string>QFrame#statusFrame {
+    background-color: #2b2b2b;
+    border-top: 1px solid #333;
+}</string>
+     </property>
+     <layout class="QHBoxLayout" name="statusLayout">
+      <property name="spacing">
+       <number>10</number>
+      </property>
+      <property name="leftMargin">
+       <number>10</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>10</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <spacer name="statusSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="clipboardStatusLabel">
+        <property name="styleSheet">
+         <string>QLabel {
+    color: #aaaaaa;
+    font-size: 11px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Clearing the clipboard in 10 seconds...</string>
+        </property>
+        <property name="visible">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QProgressBar" name="clipboardProgressBar">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>12</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>12</height>
+         </size>
+        </property>
+        <property name="value">
+         <number>100</number>
+        </property>
+        <property name="textVisible">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string>QProgressBar {
+    background-color: #222;
+    border: 1px solid #444;
+    border-radius: 2px;
+}
+QProgressBar::chunk {
+    background-color: #2d422d;
+    border-radius: 1px;
+}</string>
+        </property>
+        <property name="visible">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources>
