--- a/source/gui/EntryDialog.ui
+++ b/source/gui/EntryDialog.ui
@@ -59,6 +59,16 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QToolButton" name="generatePasswordButton">
+         <property name="toolTip">
+          <string>Generate Password</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item row="3" column="0">
@@ -102,32 +112,12 @@
    <signal>accepted()</signal>
    <receiver>EntryDialog</receiver>
    <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
   </connection>
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
    <receiver>EntryDialog</receiver>
    <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
   </connection>
  </connections>
 </ui>
